--- a/happy.html
+++ b/happy.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <p>Hello World</p>
+    <p>My name is nishan</p>
+    <p>My favorite color is blue</p>
+    <p>My favorite food is pizza</p>
 </body>
 </html>
