new puah by nishan

--- a/happy.html
+++ b/happy.html
@@ -10,7 +10,8 @@
     <p>My name is nishan</p>
     <p>My favorite color is blue</p>
     <p>My favorite food is pizza</p>
-
+ <p>My favorite animal is dog</p>
+ 
 
     <h1>Github</h1>
     <p>My Github username is nishan</p>
